# FirstCppProject

./: .gitignore  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/src/: library.cpp  library.h
Engine/src/Engine/Core/: Window.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
